--- a/mariadb/tasks/main.yml
+++ b/mariadb/tasks/main.yml
@@ -15,7 +15,8 @@
 - name: Installation of Python libraries
   apt: name=python-mysqldb state=present
 
-- include: cleanup.yaml
+- include: cleanup.yml
+  when: mariadb_installed.stat.exists == false
 
 - name: Start on boot
   service: name=mysql enabled=yes
