--- a/mariadb/defaults/main.yml
+++ b/mariadb/defaults/main.yml
@@ -1,3 +1,4 @@
 ---
-mariadb_package: mariadb-server-10.0
-mariadb_datadir: /var/lib/mysql
+mariadb_version:       10.0
+mariadb_datadir:       /var/lib/mysql
+mariadb_root_password: root
