--- a/mariadb/tasks/main.yml
+++ b/mariadb/tasks/main.yml
@@ -12,7 +12,7 @@
   register: mariadb_installed
 
 - name: Installation
-  apt: "pkg={{ item }} state=present update_cache=yes"
+  apt: "pkg={{ item }} state=present update_cache=yes cache_valid_time=86400"
   with_items:
     - mariadb-server
     - mariadb-client
