--- a/php/tasks/main.yml
+++ b/php/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Installation
-  apt: pkg={{ item }} state=present update_cache=yes
+  apt: "pkg={{ item }} state=present update_cache=yes cache_valid_time=86400"
   with_items: "{{ php_packages }}"
 
 - name: Place common config
