--- a/mariadb/defaults/main.yml
+++ b/mariadb/defaults/main.yml
@@ -2,12 +2,8 @@
 mariadb_version:       10.0
 mariadb_datadir:       /var/lib/mysql
 mariadb_root_password: root
-
-#
-# Users
-#
-
-mariadb_users: []
+mariadb_users:         []
+mariadb_databases:     []
 
 #mariadb_users:
 #  - name: remote
