--- a/php/tasks/main.yml
+++ b/php/tasks/main.yml
@@ -1,7 +1,8 @@
 ---
 - name: Installation
   apt: "pkg={{ item }} state=present update_cache=yes cache_valid_time=86400"
-  with_items: "{{ php_packages }}"
+  with_items: php_packages
+  notify: Restart php-fpm
 
 - name: Place common config
   template: src=php.ini.j2 dest=/etc/php5/{{ item }}/php.ini
