--- a/users/tasks/main.yml
+++ b/users/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Creating users
-  user: "name={{ item.name }} state=present shell=/bin/bash"
+  user: "name={{ item.name }} state=present shell=/bin/bash generate_ssh_key=yes"
   with_items: users_list
 
 - name: Authorize access
