--- a/php/defaults/main.yml
+++ b/php/defaults/main.yml
@@ -16,3 +16,4 @@ php_packages:
 php_memory_limit:      256M
 php_default_tz:        Europe/Riga
 php_session_save_path: /var/tmp
+php_display_errors:    false
