Allow setting custom php.ini.

--- a/devmachine.php/defaults/main.yml
+++ b/devmachine.php/defaults/main.yml
@@ -9,11 +9,13 @@ php_packages:
   - php5-intl
   - php5-imagick
 
+php_ini_file: php.ini
+
 #
 # PHP settings
 #
 
-php_memory_limit:      256M
-php_default_tz:        Europe/Riga
-php_session_save_path: /var/tmp
-php_display_errors:    false
+#php_memory_limit:      256M
+#php_default_tz:        Europe/Riga
+#php_session_save_path: /var/tmp
+#php_display_errors:    false
