--- a/devmachine.devtools/tasks/main.yml
+++ b/devmachine.devtools/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Installation
   apt: "pkg={{ item }} state=present update_cache=yes cache_valid_time=86400"
-  with_items: devtools_packages
+  with_items: "{{ devtools_packages }}"
 
 - name: Create composer config dir
   file:
@@ -9,7 +9,7 @@
     dest: "~{{ item.user }}/.composer"
     owner: "{{ item.user }}"
     group: "{{ item.user }}"
-  with_items: devtools_github_user_tokens
+  with_items: "{{ devtools_github_user_tokens }}"
 
 - name: Setting composer auth token
   template:
@@ -18,4 +18,4 @@
     owner: "{{ item.user }}"
     group: "{{ item.user }}"
     mode: 0600
-  with_items: devtools_github_user_tokens
+  with_items: "{{ devtools_github_user_tokens }}"
