--- a/devmachine.users/tasks/main.yml
+++ b/devmachine.users/tasks/main.yml
@@ -1,10 +1,15 @@
 ---
 - name: Creating users
-  user: "name={{ item.name }} state=present shell=/bin/bash generate_ssh_key=yes"
-  with_items: users_list
+  user:
+    name: "{{ item.name }}"
+    state: present
+    shell: /bin/bash
+    generate_ssh_key: yes
+    group: "{{ item.group | default(item.name) }}"
+  with_items: "{{ users_list }}"
 
 - name: Authorize access
   authorized_key: "user={{ item.0.name }} key='{{ lookup('file', item.1) }}'"
   with_subelements:
-    - users_list
+    - "{{ users_list }}"
     - authorized
